# tech-news-rag-assistant

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: README.md
.github/workflows/: ci.yml
chroma_db/: chroma.sqlite3
configs/: base.yaml  eval.yaml  generation.yaml  ingestion.yaml  retrieval.yaml
eval/golden_set/: golden_set.json
frontend/: index.html  script.js  style.css
scripts/: app.py  evaluate.py  ingest.py
src/tnra/: __init__.py
src/tnra/evaluation/: golden_set.py  judge.py  metrics.py  pipeline.py
src/tnra/generation/: chain.py  guard.py  llm.py  multilingual.py  pipeline.py  prompt.py  schemas.py
src/tnra/ingestion/: chunking.py  cleaning.py  embedding.py  feeds.py  indexing.py  pipeline.py  schemas.py  scraping.py
src/tnra/retrieval/: dedup.py  dense.py  fusion.py  pipeline.py  reranker.py  schemas.py  sparse.py
src/tnra/utils/: config.py  logger.py  paths.py
tests/: test_chain.py  test_evaluation_pipeline.py  test_golden_set.py  test_guard.py  test_judge.py  test_metrics.py  test_retrieval.py  test_schemas.py
